--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,13 +2,15 @@
 name = "tq-launcher"
 version = "0.1.0"
 edition = "2021"
+default-run = "tql_gui"
 
 [dependencies]
 clap = { version = "4.5.4", optional = true, features = ["derive"] }
 gif = { version = "0.11.1", optional = true }
 
 [features]
-default = ["gui"]
+# default = ["cli", "gui"]
+default = []
 gui = []
 cli = []
 
@@ -17,5 +19,5 @@ name="tql"
 required-features = ["cli"]
 
 [[bin]]
-name="tql-gui"
+name="tql_gui"
 required-features = ["gui"]
