--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 default-run = "tql_gui"
 
 [dependencies]
+anyhow = "1.0.86"
 clap = { version = "4.5.4", optional = true, features = ["derive"] }
 
 [features]
