--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ default-run = "tql_gui"
 [dependencies]
 anyhow = "1.0.86"
 clap = { version = "4.5.4", optional = true, features = ["derive"] }
+dirs = "5.0.1"
 
 [features]
 default = ["cli", "gui"]
