--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,12 @@ default-run = "tql_gui"
 anyhow = "1.0.86"
 clap = { version = "4.5.4", optional = true, features = ["derive"] }
 dirs = "5.0.1"
+eframe = { version = "0.27.2", optional = true }
 
 [features]
-default = ["cli", "gui"]
+default = ["gui"]
 # default = []
-gui = []
+gui = ["eframe"]
 cli = ["clap"]
 
 [[bin]]
