--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ anyhow = "1.0.86"
 clap = { version = "4.5.4", optional = true, features = ["derive"] }
 dirs = "5.0.1"
 eframe = { version = "0.27.2", optional = true }
+egui_extras = "0.27.2"
 
 [features]
 default = ["gui"]
