--- a/tql_internal/Cargo.toml
+++ b/tql_internal/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 anyhow = "1.0.86"
 dirs = "5.0.1"
 octocrab = "0.38.0"
+reqwest = "0.12.4"
 tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
 
