--- a/tql_internal/Cargo.toml
+++ b/tql_internal/Cargo.toml
@@ -9,4 +9,5 @@ dirs = "5.0.1"
 octocrab = "0.38.0"
 reqwest = "0.12.4"
 tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
+zip = "2.1.0"
 
