--- a/.github/workflows/tauri.yml
+++ b/.github/workflows/tauri.yml
@@ -8,6 +8,9 @@ on:
   
 jobs:
   publish-tauri:
+    defaults:
+      run:
+        working-directory: ./tql_gui
     permissions:
       contents: write
     strategy:
@@ -46,11 +49,6 @@ jobs:
         with:
           # Those targets are only used on macos runners so it's in an `if` to slightly speed up windows and linux builds.
           targets: ${{ matrix.settings.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
-
-      - name: Rust cache
-        uses: swatinem/rust-cache@v2
-        with:
-          workspaces: './src-tauri -> target'
 
       - name: install frontend dependencies
         # If you don't have `beforeBuildCommand` configured you may want to build your frontend here too.
