--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "tql_gui",
+    "name": "tq_launcher",
     "private": true,
-    "version": "0.2.0",
+    "version": "0.2.1",
     "type": "module",
     "scripts": {
         "dev": "vite",
